added MongoDB DTO for GET request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://training-dbhj9.mongodb.net/test
+spring.data.mongodb.uri=mongodb+srv://test:9Q3J96UK4prE9FGW@training-dbhj9.mongodb.net/test
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=test
